How to add image and link

--- a/First Chapter/index.html
+++ b/First Chapter/index.html
@@ -8,10 +8,15 @@
 <body>
 
     <h1>My First Heading</h1>
+    <h2>My second heading</h2>
+    <h4>this is my heading four</h4>
     <p>My first paragraph.</p>
-
+    Outside link,Image
+    <a href="https://www.google.com">Open Google Site</a>
+    <img src="https://www.w3schools.com/html/w3schools.jpg" />
+    Local Link,Image
+    <a href="./header.html">Open Header Filer</a>
+    <img src="./img/html.png" />
 </body>
 
 </html> 
-
-I have to do this task.
