Practice of Headings, links and images

--- a/First Chapter/index.html
+++ b/First Chapter/index.html
@@ -6,6 +6,18 @@
 </head>
 
 <body>
+    <h1> Practice Period </h1>
+    <h2> Headings </h2>
+    <h3> Links </h3>
+    <h4> Images </h4>
+
+    <p> I am learning the basic concept of HTML and after that I will be learning about the making or coding of a website. </p>
+    
+    <a href="http://www.gmail.com"> Open Gmail </a>
+
+    <img src="https://miro.medium.com/max/800/1*28-1lYrYTQoLhi87mllgBw.png" />
+
+    
 
     <h1>My First Heading</h1>
     <h2>My second heading</h2>
